--- a/CodeNameFive/View/Base.lproj/Main.storyboard
+++ b/CodeNameFive/View/Base.lproj/Main.storyboard
@@ -181,17 +181,20 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="EX9-NE-RZa">
                                 <rect key="frame" x="0.0" y="780" width="414" height="82"/>
                                 <subviews>
-                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="WC7-pr-TNN">
-                                        <rect key="frame" x="119.66666666666669" y="10" width="175" height="62"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" translatesAutoresizingMaskIntoConstraints="NO" id="WC7-pr-TNN">
+                                        <rect key="frame" x="119.66666666666669" y="23" width="175" height="36"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Findings trips for you..." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="OSd-BX-5cu">
-                                                <rect key="frame" x="0.0" y="0.0" width="175" height="31"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="175" height="21"/>
                                                 <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="16"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" text="Time connected: 10h 40m" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="9" translatesAutoresizingMaskIntoConstraints="NO" id="Lyl-9M-0t4">
-                                                <rect key="frame" x="0.0" y="31" width="175" height="31"/>
+                                                <rect key="frame" x="0.0" y="21" width="175" height="15"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="15" id="Vih-uj-6eJ"/>
+                                                </constraints>
                                                 <fontDescription key="fontDescription" name="HelveticaNeue-Roman" family="Helvetica 55 Roman" pointSize="12"/>
                                                 <color key="textColor" name="secondary color"/>
                                                 <nil key="highlightedColor"/>
@@ -205,17 +208,20 @@
                                             <constraint firstAttribute="height" constant="4" id="zP8-ih-EAh"/>
                                         </constraints>
                                     </view>
-                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="kGy-8m-HwF">
-                                        <rect key="frame" x="137" y="10" width="140.33333333333337" height="62"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" translatesAutoresizingMaskIntoConstraints="NO" id="kGy-8m-HwF">
+                                        <rect key="frame" x="137" y="23" width="140.33333333333337" height="36"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="You're offline" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="ghT-oN-1pf">
-                                                <rect key="frame" x="0.0" y="0.0" width="140.33333333333334" height="31"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="140.33333333333334" height="21"/>
                                                 <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="16"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" text="Time connected: 10h 40m" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="9" translatesAutoresizingMaskIntoConstraints="NO" id="EzG-vi-cxb">
-                                                <rect key="frame" x="0.0" y="31" width="140.33333333333334" height="31"/>
+                                                <rect key="frame" x="0.0" y="21" width="140.33333333333334" height="15"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="15" id="eiF-1m-g6y"/>
+                                                </constraints>
                                                 <fontDescription key="fontDescription" name="HelveticaNeue-Roman" family="Helvetica 55 Roman" pointSize="12"/>
                                                 <color key="textColor" name="secondary color"/>
                                                 <nil key="highlightedColor"/>
@@ -226,12 +232,8 @@
                                 <color key="backgroundColor" name="UIViewCard"/>
                                 <constraints>
                                     <constraint firstAttribute="trailing" secondItem="HTb-Br-UrC" secondAttribute="trailing" id="6vU-hn-LFW"/>
-                                    <constraint firstAttribute="bottom" secondItem="kGy-8m-HwF" secondAttribute="bottom" constant="10" id="9ux-s4-SUN"/>
-                                    <constraint firstItem="kGy-8m-HwF" firstAttribute="top" secondItem="EX9-NE-RZa" secondAttribute="top" constant="10" id="Jsu-SC-gT8"/>
                                     <constraint firstItem="WC7-pr-TNN" firstAttribute="centerX" secondItem="EX9-NE-RZa" secondAttribute="centerX" id="Kti-ML-I1b"/>
                                     <constraint firstItem="WC7-pr-TNN" firstAttribute="centerY" secondItem="EX9-NE-RZa" secondAttribute="centerY" id="MhJ-DJ-XqB"/>
-                                    <constraint firstItem="WC7-pr-TNN" firstAttribute="top" secondItem="EX9-NE-RZa" secondAttribute="top" constant="10" id="PFI-pe-ZHh"/>
-                                    <constraint firstAttribute="bottom" secondItem="WC7-pr-TNN" secondAttribute="bottom" constant="10" id="RBU-Sq-mHv"/>
                                     <constraint firstItem="HTb-Br-UrC" firstAttribute="width" secondItem="EX9-NE-RZa" secondAttribute="width" constant="-332" id="T3V-ef-9XB"/>
                                     <constraint firstItem="kGy-8m-HwF" firstAttribute="centerY" secondItem="EX9-NE-RZa" secondAttribute="centerY" id="ZH9-5D-cKz"/>
                                     <constraint firstItem="kGy-8m-HwF" firstAttribute="centerX" secondItem="EX9-NE-RZa" secondAttribute="centerX" id="c1E-2U-XSP"/>
